probando busqueda por generos musicales

--- a/notebooks/extraccion.ipynb
+++ b/notebooks/extraccion.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2830e02a",
    "metadata": {},
    "outputs": [
@@ -120,201 +120,201 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔍 Buscando: 'bb'\n",
-      "✅ 201 resultados para 'bb'\n",
-      "🔍 Buscando: 'bc'\n",
-      "✅ 176 resultados para 'bc'\n",
-      "🔍 Buscando: 'bd'\n",
-      "✅ 201 resultados para 'bd'\n",
-      "🔍 Buscando: 'be'\n",
-      "✅ 200 resultados para 'be'\n",
-      "🔍 Buscando: 'bf'\n",
-      "✅ 200 resultados para 'bf'\n",
-      "🔍 Buscando: 'bg'\n",
-      "✅ 200 resultados para 'bg'\n",
-      "🔍 Buscando: 'bh'\n",
-      "✅ 188 resultados para 'bh'\n",
-      "🔍 Buscando: 'bi'\n",
-      "✅ 199 resultados para 'bi'\n",
-      "🔍 Buscando: 'bj'\n",
-      "✅ 200 resultados para 'bj'\n",
-      "🔍 Buscando: 'bk'\n",
-      "✅ 201 resultados para 'bk'\n",
-      "🔍 Buscando: 'bl'\n",
-      "✅ 180 resultados para 'bl'\n",
-      "🔍 Buscando: 'bm'\n",
-      "✅ 200 resultados para 'bm'\n",
-      "🔍 Buscando: 'bn'\n",
-      "✅ 151 resultados para 'bn'\n",
-      "🔍 Buscando: 'bo'\n",
-      "✅ 201 resultados para 'bo'\n",
-      "🔍 Buscando: 'bp'\n",
-      "✅ 200 resultados para 'bp'\n",
-      "🔍 Buscando: 'bq'\n",
-      "✅ 182 resultados para 'bq'\n",
-      "🔍 Buscando: 'br'\n",
-      "✅ 184 resultados para 'br'\n",
-      "🔍 Buscando: 'bs'\n",
-      "✅ 202 resultados para 'bs'\n",
-      "🔍 Buscando: 'bt'\n",
-      "✅ 201 resultados para 'bt'\n",
-      "🔍 Buscando: 'bu'\n",
-      "✅ 200 resultados para 'bu'\n",
-      "🔍 Buscando: 'bv'\n",
-      "✅ 90 resultados para 'bv'\n",
-      "🔍 Buscando: 'bw'\n",
-      "✅ 159 resultados para 'bw'\n",
-      "🔍 Buscando: 'bx'\n",
-      "✅ 185 resultados para 'bx'\n",
-      "🔍 Buscando: 'by'\n",
-      "✅ 196 resultados para 'by'\n",
-      "🔍 Buscando: 'bz'\n",
-      "✅ 210 resultados para 'bz'\n",
-      "🔍 Buscando: 'ca'\n",
-      "✅ 202 resultados para 'ca'\n",
-      "🔍 Buscando: 'cb'\n",
-      "✅ 166 resultados para 'cb'\n",
-      "🔍 Buscando: 'cc'\n",
-      "✅ 89 resultados para 'cc'\n",
-      "🔍 Buscando: 'cd'\n",
-      "✅ 143 resultados para 'cd'\n",
-      "🔍 Buscando: 'ce'\n",
-      "✅ 200 resultados para 'ce'\n",
-      "🔍 Buscando: 'cf'\n",
-      "✅ 200 resultados para 'cf'\n",
-      "🔍 Buscando: 'cg'\n",
-      "✅ 199 resultados para 'cg'\n",
-      "🔍 Buscando: 'ch'\n",
-      "✅ 191 resultados para 'ch'\n",
-      "🔍 Buscando: 'ci'\n",
-      "✅ 202 resultados para 'ci'\n",
-      "🔍 Buscando: 'cj'\n",
-      "✅ 200 resultados para 'cj'\n",
-      "🔍 Buscando: 'ck'\n",
-      "✅ 180 resultados para 'ck'\n",
-      "🔍 Buscando: 'cl'\n",
-      "✅ 202 resultados para 'cl'\n",
-      "🔍 Buscando: 'cm'\n",
-      "✅ 187 resultados para 'cm'\n",
-      "🔍 Buscando: 'cn'\n",
-      "✅ 204 resultados para 'cn'\n",
-      "🔍 Buscando: 'co'\n",
-      "✅ 203 resultados para 'co'\n",
-      "🔍 Buscando: 'cp'\n",
-      "✅ 174 resultados para 'cp'\n",
-      "🔍 Buscando: 'cq'\n",
-      "✅ 198 resultados para 'cq'\n",
-      "🔍 Buscando: 'cr'\n",
-      "✅ 177 resultados para 'cr'\n",
-      "🔍 Buscando: 'cs'\n",
-      "✅ 193 resultados para 'cs'\n",
-      "🔍 Buscando: 'ct'\n",
-      "✅ 201 resultados para 'ct'\n",
-      "🔍 Buscando: 'cu'\n",
-      "✅ 200 resultados para 'cu'\n",
-      "🔍 Buscando: 'cv'\n",
-      "✅ 200 resultados para 'cv'\n",
-      "🔍 Buscando: 'cw'\n",
-      "✅ 148 resultados para 'cw'\n",
-      "🔍 Buscando: 'cx'\n",
-      "✅ 164 resultados para 'cx'\n",
-      "🔍 Buscando: 'cy'\n",
-      "✅ 173 resultados para 'cy'\n",
-      "🔍 Buscando: 'cz'\n",
-      "✅ 183 resultados para 'cz'\n",
-      "🔍 Buscando: 'da'\n",
-      "✅ 204 resultados para 'da'\n",
-      "🔍 Buscando: 'db'\n",
-      "✅ 200 resultados para 'db'\n",
-      "🔍 Buscando: 'dc'\n",
-      "✅ 200 resultados para 'dc'\n",
-      "🔍 Buscando: 'dd'\n",
-      "✅ 200 resultados para 'dd'\n",
       "🔍 Buscando: 'de'\n",
       "⚠️ Sin resultados para 'de'\n",
-      "🔍 Buscando: 'df'\n",
-      "✅ 200 resultados para 'df'\n",
-      "🔍 Buscando: 'dg'\n",
-      "✅ 200 resultados para 'dg'\n",
-      "🔍 Buscando: 'dh'\n",
-      "✅ 174 resultados para 'dh'\n",
-      "🔍 Buscando: 'di'\n",
-      "✅ 204 resultados para 'di'\n",
-      "🔍 Buscando: 'dj'\n",
-      "✅ 203 resultados para 'dj'\n",
-      "🔍 Buscando: 'dk'\n",
-      "✅ 199 resultados para 'dk'\n",
-      "🔍 Buscando: 'dl'\n",
-      "✅ 117 resultados para 'dl'\n",
-      "🔍 Buscando: 'dm'\n",
-      "✅ 189 resultados para 'dm'\n",
-      "🔍 Buscando: 'dn'\n",
-      "✅ 168 resultados para 'dn'\n",
       "🔍 Buscando: 'do'\n",
       "⚠️ Sin resultados para 'do'\n",
-      "🔍 Buscando: 'dp'\n",
-      "✅ 200 resultados para 'dp'\n",
-      "🔍 Buscando: 'dq'\n",
-      "✅ 203 resultados para 'dq'\n",
-      "🔍 Buscando: 'dr'\n",
-      "✅ 202 resultados para 'dr'\n",
-      "🔍 Buscando: 'ds'\n",
-      "✅ 206 resultados para 'ds'\n",
-      "🔍 Buscando: 'dt'\n",
-      "✅ 187 resultados para 'dt'\n",
       "🔍 Buscando: 'du'\n",
       "⚠️ Sin resultados para 'du'\n",
-      "🔍 Buscando: 'dv'\n",
-      "✅ 200 resultados para 'dv'\n",
-      "🔍 Buscando: 'dw'\n",
-      "✅ 200 resultados para 'dw'\n",
-      "🔍 Buscando: 'dx'\n",
-      "✅ 190 resultados para 'dx'\n",
-      "🔍 Buscando: 'dy'\n",
-      "✅ 187 resultados para 'dy'\n",
-      "🔍 Buscando: 'dz'\n",
-      "✅ 202 resultados para 'dz'\n",
-      "🔍 Buscando: 'ea'\n",
-      "✅ 200 resultados para 'ea'\n",
-      "🔍 Buscando: 'eb'\n",
-      "✅ 177 resultados para 'eb'\n",
-      "🔍 Buscando: 'ec'\n",
-      "✅ 200 resultados para 'ec'\n",
-      "🔍 Buscando: 'ed'\n",
-      "✅ 201 resultados para 'ed'\n",
-      "🔍 Buscando: 'ee'\n",
-      "✅ 153 resultados para 'ee'\n",
-      "🔍 Buscando: 'ef'\n",
-      "✅ 200 resultados para 'ef'\n",
-      "🔍 Buscando: 'eg'\n",
-      "✅ 180 resultados para 'eg'\n",
-      "🔍 Buscando: 'eh'\n",
-      "✅ 129 resultados para 'eh'\n",
-      "🔍 Buscando: 'ei'\n",
-      "✅ 200 resultados para 'ei'\n",
-      "🔍 Buscando: 'ej'\n",
-      "✅ 184 resultados para 'ej'\n",
-      "🔍 Buscando: 'ek'\n",
-      "✅ 196 resultados para 'ek'\n",
-      "🔍 Buscando: 'el'\n",
-      "✅ 200 resultados para 'el'\n",
-      "🔍 Buscando: 'em'\n",
-      "✅ 202 resultados para 'em'\n",
-      "🔍 Buscando: 'en'\n",
-      "✅ 201 resultados para 'en'\n",
-      "🔍 Buscando: 'eo'\n",
-      "✅ 171 resultados para 'eo'\n",
       "🔍 Buscando: 'ep'\n",
       "⚠️ Sin resultados para 'ep'\n",
-      "🔍 Buscando: 'eq'\n",
-      "✅ 179 resultados para 'eq'\n",
-      "🔍 Buscando: 'er'\n",
-      "✅ 204 resultados para 'er'\n",
-      "🔍 Buscando: 'es'\n",
-      "✅ 192 resultados para 'es'\n",
-      "🔍 Buscando: 'et'\n",
-      "✅ 204 resultados para 'et'\n",
-      "📦 Guardados 17494 registros en '../data/data_raw/itunes_2001.csv'\n"
+      "🔍 Buscando: 'eu'\n",
+      "✅ 157 resultados para 'eu'\n",
+      "🔍 Buscando: 'ev'\n",
+      "✅ 200 resultados para 'ev'\n",
+      "🔍 Buscando: 'ew'\n",
+      "✅ 199 resultados para 'ew'\n",
+      "🔍 Buscando: 'ex'\n",
+      "✅ 201 resultados para 'ex'\n",
+      "🔍 Buscando: 'ey'\n",
+      "✅ 200 resultados para 'ey'\n",
+      "🔍 Buscando: 'ez'\n",
+      "✅ 201 resultados para 'ez'\n",
+      "🔍 Buscando: 'fa'\n",
+      "✅ 200 resultados para 'fa'\n",
+      "🔍 Buscando: 'fb'\n",
+      "✅ 98 resultados para 'fb'\n",
+      "🔍 Buscando: 'fc'\n",
+      "✅ 172 resultados para 'fc'\n",
+      "🔍 Buscando: 'fd'\n",
+      "✅ 200 resultados para 'fd'\n",
+      "🔍 Buscando: 'fe'\n",
+      "✅ 200 resultados para 'fe'\n",
+      "🔍 Buscando: 'ff'\n",
+      "✅ 200 resultados para 'ff'\n",
+      "🔍 Buscando: 'fg'\n",
+      "✅ 201 resultados para 'fg'\n",
+      "🔍 Buscando: 'fh'\n",
+      "✅ 202 resultados para 'fh'\n",
+      "🔍 Buscando: 'fi'\n",
+      "✅ 200 resultados para 'fi'\n",
+      "🔍 Buscando: 'fj'\n",
+      "✅ 200 resultados para 'fj'\n",
+      "🔍 Buscando: 'fk'\n",
+      "✅ 200 resultados para 'fk'\n",
+      "🔍 Buscando: 'fl'\n",
+      "✅ 200 resultados para 'fl'\n",
+      "🔍 Buscando: 'fm'\n",
+      "✅ 202 resultados para 'fm'\n",
+      "🔍 Buscando: 'fn'\n",
+      "✅ 195 resultados para 'fn'\n",
+      "🔍 Buscando: 'fo'\n",
+      "✅ 199 resultados para 'fo'\n",
+      "🔍 Buscando: 'fp'\n",
+      "✅ 191 resultados para 'fp'\n",
+      "🔍 Buscando: 'fq'\n",
+      "✅ 186 resultados para 'fq'\n",
+      "🔍 Buscando: 'fr'\n",
+      "✅ 200 resultados para 'fr'\n",
+      "🔍 Buscando: 'fs'\n",
+      "✅ 179 resultados para 'fs'\n",
+      "🔍 Buscando: 'ft'\n",
+      "✅ 203 resultados para 'ft'\n",
+      "🔍 Buscando: 'fu'\n",
+      "✅ 202 resultados para 'fu'\n",
+      "🔍 Buscando: 'fv'\n",
+      "✅ 75 resultados para 'fv'\n",
+      "🔍 Buscando: 'fw'\n",
+      "✅ 204 resultados para 'fw'\n",
+      "🔍 Buscando: 'fx'\n",
+      "✅ 200 resultados para 'fx'\n",
+      "🔍 Buscando: 'fy'\n",
+      "✅ 200 resultados para 'fy'\n",
+      "🔍 Buscando: 'fz'\n",
+      "✅ 200 resultados para 'fz'\n",
+      "🔍 Buscando: 'ga'\n",
+      "✅ 203 resultados para 'ga'\n",
+      "🔍 Buscando: 'gb'\n",
+      "✅ 208 resultados para 'gb'\n",
+      "🔍 Buscando: 'gc'\n",
+      "✅ 179 resultados para 'gc'\n",
+      "🔍 Buscando: 'gd'\n",
+      "✅ 166 resultados para 'gd'\n",
+      "🔍 Buscando: 'ge'\n",
+      "✅ 201 resultados para 'ge'\n",
+      "🔍 Buscando: 'gf'\n",
+      "✅ 190 resultados para 'gf'\n",
+      "🔍 Buscando: 'gg'\n",
+      "✅ 202 resultados para 'gg'\n",
+      "🔍 Buscando: 'gh'\n",
+      "✅ 200 resultados para 'gh'\n",
+      "🔍 Buscando: 'gi'\n",
+      "✅ 202 resultados para 'gi'\n",
+      "🔍 Buscando: 'gj'\n",
+      "✅ 166 resultados para 'gj'\n",
+      "🔍 Buscando: 'gk'\n",
+      "✅ 182 resultados para 'gk'\n",
+      "🔍 Buscando: 'gl'\n",
+      "✅ 205 resultados para 'gl'\n",
+      "🔍 Buscando: 'gm'\n",
+      "✅ 200 resultados para 'gm'\n",
+      "🔍 Buscando: 'gn'\n",
+      "✅ 200 resultados para 'gn'\n",
+      "🔍 Buscando: 'go'\n",
+      "✅ 206 resultados para 'go'\n",
+      "🔍 Buscando: 'gp'\n",
+      "✅ 202 resultados para 'gp'\n",
+      "🔍 Buscando: 'gq'\n",
+      "✅ 200 resultados para 'gq'\n",
+      "🔍 Buscando: 'gr'\n",
+      "✅ 200 resultados para 'gr'\n",
+      "🔍 Buscando: 'gs'\n",
+      "✅ 200 resultados para 'gs'\n",
+      "🔍 Buscando: 'gt'\n",
+      "✅ 203 resultados para 'gt'\n",
+      "🔍 Buscando: 'gu'\n",
+      "✅ 202 resultados para 'gu'\n",
+      "🔍 Buscando: 'gv'\n",
+      "✅ 161 resultados para 'gv'\n",
+      "🔍 Buscando: 'gw'\n",
+      "✅ 165 resultados para 'gw'\n",
+      "🔍 Buscando: 'gx'\n",
+      "✅ 149 resultados para 'gx'\n",
+      "🔍 Buscando: 'gy'\n",
+      "✅ 191 resultados para 'gy'\n",
+      "🔍 Buscando: 'gz'\n",
+      "✅ 135 resultados para 'gz'\n",
+      "🔍 Buscando: 'ha'\n",
+      "✅ 202 resultados para 'ha'\n",
+      "🔍 Buscando: 'hb'\n",
+      "✅ 174 resultados para 'hb'\n",
+      "🔍 Buscando: 'hc'\n",
+      "✅ 151 resultados para 'hc'\n",
+      "🔍 Buscando: 'hd'\n",
+      "✅ 200 resultados para 'hd'\n",
+      "🔍 Buscando: 'he'\n",
+      "✅ 200 resultados para 'he'\n",
+      "🔍 Buscando: 'hf'\n",
+      "✅ 200 resultados para 'hf'\n",
+      "🔍 Buscando: 'hg'\n",
+      "✅ 162 resultados para 'hg'\n",
+      "🔍 Buscando: 'hh'\n",
+      "✅ 184 resultados para 'hh'\n",
+      "🔍 Buscando: 'hi'\n",
+      "✅ 194 resultados para 'hi'\n",
+      "🔍 Buscando: 'hj'\n",
+      "✅ 92 resultados para 'hj'\n",
+      "🔍 Buscando: 'hk'\n",
+      "✅ 202 resultados para 'hk'\n",
+      "🔍 Buscando: 'hl'\n",
+      "✅ 200 resultados para 'hl'\n",
+      "🔍 Buscando: 'hm'\n",
+      "✅ 146 resultados para 'hm'\n",
+      "🔍 Buscando: 'hn'\n",
+      "✅ 200 resultados para 'hn'\n",
+      "🔍 Buscando: 'ho'\n",
+      "✅ 200 resultados para 'ho'\n",
+      "🔍 Buscando: 'hp'\n",
+      "✅ 150 resultados para 'hp'\n",
+      "🔍 Buscando: 'hq'\n",
+      "✅ 190 resultados para 'hq'\n",
+      "🔍 Buscando: 'hr'\n",
+      "✅ 200 resultados para 'hr'\n",
+      "🔍 Buscando: 'hs'\n",
+      "✅ 154 resultados para 'hs'\n",
+      "🔍 Buscando: 'ht'\n",
+      "✅ 160 resultados para 'ht'\n",
+      "🔍 Buscando: 'hu'\n",
+      "✅ 207 resultados para 'hu'\n",
+      "🔍 Buscando: 'hv'\n",
+      "✅ 189 resultados para 'hv'\n",
+      "🔍 Buscando: 'hw'\n",
+      "✅ 208 resultados para 'hw'\n",
+      "🔍 Buscando: 'hx'\n",
+      "✅ 176 resultados para 'hx'\n",
+      "🔍 Buscando: 'hy'\n",
+      "✅ 201 resultados para 'hy'\n",
+      "🔍 Buscando: 'hz'\n",
+      "✅ 137 resultados para 'hz'\n",
+      "🔍 Buscando: 'ia'\n",
+      "✅ 202 resultados para 'ia'\n",
+      "🔍 Buscando: 'ib'\n",
+      "✅ 189 resultados para 'ib'\n",
+      "🔍 Buscando: 'ic'\n",
+      "✅ 184 resultados para 'ic'\n",
+      "🔍 Buscando: 'id'\n",
+      "✅ 202 resultados para 'id'\n",
+      "🔍 Buscando: 'ie'\n",
+      "✅ 184 resultados para 'ie'\n",
+      "🔍 Buscando: 'if'\n",
+      "✅ 200 resultados para 'if'\n",
+      "🔍 Buscando: 'ig'\n",
+      "✅ 190 resultados para 'ig'\n",
+      "🔍 Buscando: 'ih'\n",
+      "✅ 153 resultados para 'ih'\n",
+      "🔍 Buscando: 'ii'\n",
+      "⚠️ Sin resultados para 'ii'\n",
+      "📦 Guardados 17168 registros en '../data/data_raw/itunes_2025-04-21.csv'\n"
      ]
     }
    ],
