--- a/notebooks/extraccion.ipynb
+++ b/notebooks/extraccion.ipynb
@@ -128,193 +128,53 @@
       "⚠️ Sin resultados para 'du'\n",
       "🔍 Buscando: 'ep'\n",
       "⚠️ Sin resultados para 'ep'\n",
-      "🔍 Buscando: 'eu'\n",
-      "✅ 157 resultados para 'eu'\n",
-      "🔍 Buscando: 'ev'\n",
-      "✅ 200 resultados para 'ev'\n",
-      "🔍 Buscando: 'ew'\n",
-      "✅ 199 resultados para 'ew'\n",
-      "🔍 Buscando: 'ex'\n",
-      "✅ 201 resultados para 'ex'\n",
-      "🔍 Buscando: 'ey'\n",
-      "✅ 200 resultados para 'ey'\n",
-      "🔍 Buscando: 'ez'\n",
-      "✅ 201 resultados para 'ez'\n",
-      "🔍 Buscando: 'fa'\n",
-      "✅ 200 resultados para 'fa'\n",
-      "🔍 Buscando: 'fb'\n",
-      "✅ 98 resultados para 'fb'\n",
-      "🔍 Buscando: 'fc'\n",
-      "✅ 172 resultados para 'fc'\n",
-      "🔍 Buscando: 'fd'\n",
-      "✅ 200 resultados para 'fd'\n",
-      "🔍 Buscando: 'fe'\n",
-      "✅ 200 resultados para 'fe'\n",
-      "🔍 Buscando: 'ff'\n",
-      "✅ 200 resultados para 'ff'\n",
-      "🔍 Buscando: 'fg'\n",
-      "✅ 201 resultados para 'fg'\n",
-      "🔍 Buscando: 'fh'\n",
-      "✅ 202 resultados para 'fh'\n",
-      "🔍 Buscando: 'fi'\n",
-      "✅ 200 resultados para 'fi'\n",
-      "🔍 Buscando: 'fj'\n",
-      "✅ 200 resultados para 'fj'\n",
-      "🔍 Buscando: 'fk'\n",
-      "✅ 200 resultados para 'fk'\n",
-      "🔍 Buscando: 'fl'\n",
-      "✅ 200 resultados para 'fl'\n",
-      "🔍 Buscando: 'fm'\n",
-      "✅ 202 resultados para 'fm'\n",
-      "🔍 Buscando: 'fn'\n",
-      "✅ 195 resultados para 'fn'\n",
-      "🔍 Buscando: 'fo'\n",
-      "✅ 199 resultados para 'fo'\n",
-      "🔍 Buscando: 'fp'\n",
-      "✅ 191 resultados para 'fp'\n",
-      "🔍 Buscando: 'fq'\n",
-      "✅ 186 resultados para 'fq'\n",
-      "🔍 Buscando: 'fr'\n",
-      "✅ 200 resultados para 'fr'\n",
-      "🔍 Buscando: 'fs'\n",
-      "✅ 179 resultados para 'fs'\n",
-      "🔍 Buscando: 'ft'\n",
-      "✅ 203 resultados para 'ft'\n",
-      "🔍 Buscando: 'fu'\n",
-      "✅ 202 resultados para 'fu'\n",
-      "🔍 Buscando: 'fv'\n",
-      "✅ 75 resultados para 'fv'\n",
-      "🔍 Buscando: 'fw'\n",
-      "✅ 204 resultados para 'fw'\n",
-      "🔍 Buscando: 'fx'\n",
-      "✅ 200 resultados para 'fx'\n",
-      "🔍 Buscando: 'fy'\n",
-      "✅ 200 resultados para 'fy'\n",
-      "🔍 Buscando: 'fz'\n",
-      "✅ 200 resultados para 'fz'\n",
-      "🔍 Buscando: 'ga'\n",
-      "✅ 203 resultados para 'ga'\n",
-      "🔍 Buscando: 'gb'\n",
-      "✅ 208 resultados para 'gb'\n",
-      "🔍 Buscando: 'gc'\n",
-      "✅ 179 resultados para 'gc'\n",
-      "🔍 Buscando: 'gd'\n",
-      "✅ 166 resultados para 'gd'\n",
-      "🔍 Buscando: 'ge'\n",
-      "✅ 201 resultados para 'ge'\n",
-      "🔍 Buscando: 'gf'\n",
-      "✅ 190 resultados para 'gf'\n",
-      "🔍 Buscando: 'gg'\n",
-      "✅ 202 resultados para 'gg'\n",
-      "🔍 Buscando: 'gh'\n",
-      "✅ 200 resultados para 'gh'\n",
-      "🔍 Buscando: 'gi'\n",
-      "✅ 202 resultados para 'gi'\n",
-      "🔍 Buscando: 'gj'\n",
-      "✅ 166 resultados para 'gj'\n",
-      "🔍 Buscando: 'gk'\n",
-      "✅ 182 resultados para 'gk'\n",
-      "🔍 Buscando: 'gl'\n",
-      "✅ 205 resultados para 'gl'\n",
-      "🔍 Buscando: 'gm'\n",
-      "✅ 200 resultados para 'gm'\n",
-      "🔍 Buscando: 'gn'\n",
-      "✅ 200 resultados para 'gn'\n",
-      "🔍 Buscando: 'go'\n",
-      "✅ 206 resultados para 'go'\n",
-      "🔍 Buscando: 'gp'\n",
-      "✅ 202 resultados para 'gp'\n",
-      "🔍 Buscando: 'gq'\n",
-      "✅ 200 resultados para 'gq'\n",
-      "🔍 Buscando: 'gr'\n",
-      "✅ 200 resultados para 'gr'\n",
-      "🔍 Buscando: 'gs'\n",
-      "✅ 200 resultados para 'gs'\n",
-      "🔍 Buscando: 'gt'\n",
-      "✅ 203 resultados para 'gt'\n",
-      "🔍 Buscando: 'gu'\n",
-      "✅ 202 resultados para 'gu'\n",
-      "🔍 Buscando: 'gv'\n",
-      "✅ 161 resultados para 'gv'\n",
-      "🔍 Buscando: 'gw'\n",
-      "✅ 165 resultados para 'gw'\n",
-      "🔍 Buscando: 'gx'\n",
-      "✅ 149 resultados para 'gx'\n",
-      "🔍 Buscando: 'gy'\n",
-      "✅ 191 resultados para 'gy'\n",
-      "🔍 Buscando: 'gz'\n",
-      "✅ 135 resultados para 'gz'\n",
-      "🔍 Buscando: 'ha'\n",
-      "✅ 202 resultados para 'ha'\n",
-      "🔍 Buscando: 'hb'\n",
-      "✅ 174 resultados para 'hb'\n",
-      "🔍 Buscando: 'hc'\n",
-      "✅ 151 resultados para 'hc'\n",
-      "🔍 Buscando: 'hd'\n",
-      "✅ 200 resultados para 'hd'\n",
-      "🔍 Buscando: 'he'\n",
-      "✅ 200 resultados para 'he'\n",
-      "🔍 Buscando: 'hf'\n",
-      "✅ 200 resultados para 'hf'\n",
-      "🔍 Buscando: 'hg'\n",
-      "✅ 162 resultados para 'hg'\n",
-      "🔍 Buscando: 'hh'\n",
-      "✅ 184 resultados para 'hh'\n",
-      "🔍 Buscando: 'hi'\n",
-      "✅ 194 resultados para 'hi'\n",
-      "🔍 Buscando: 'hj'\n",
-      "✅ 92 resultados para 'hj'\n",
-      "🔍 Buscando: 'hk'\n",
-      "✅ 202 resultados para 'hk'\n",
-      "🔍 Buscando: 'hl'\n",
-      "✅ 200 resultados para 'hl'\n",
-      "🔍 Buscando: 'hm'\n",
-      "✅ 146 resultados para 'hm'\n",
-      "🔍 Buscando: 'hn'\n",
-      "✅ 200 resultados para 'hn'\n",
-      "🔍 Buscando: 'ho'\n",
-      "✅ 200 resultados para 'ho'\n",
-      "🔍 Buscando: 'hp'\n",
-      "✅ 150 resultados para 'hp'\n",
-      "🔍 Buscando: 'hq'\n",
-      "✅ 190 resultados para 'hq'\n",
-      "🔍 Buscando: 'hr'\n",
-      "✅ 200 resultados para 'hr'\n",
-      "🔍 Buscando: 'hs'\n",
-      "✅ 154 resultados para 'hs'\n",
-      "🔍 Buscando: 'ht'\n",
-      "✅ 160 resultados para 'ht'\n",
-      "🔍 Buscando: 'hu'\n",
-      "✅ 207 resultados para 'hu'\n",
-      "🔍 Buscando: 'hv'\n",
-      "✅ 189 resultados para 'hv'\n",
-      "🔍 Buscando: 'hw'\n",
-      "✅ 208 resultados para 'hw'\n",
-      "🔍 Buscando: 'hx'\n",
-      "✅ 176 resultados para 'hx'\n",
-      "🔍 Buscando: 'hy'\n",
-      "✅ 201 resultados para 'hy'\n",
-      "🔍 Buscando: 'hz'\n",
-      "✅ 137 resultados para 'hz'\n",
-      "🔍 Buscando: 'ia'\n",
-      "✅ 202 resultados para 'ia'\n",
-      "🔍 Buscando: 'ib'\n",
-      "✅ 189 resultados para 'ib'\n",
-      "🔍 Buscando: 'ic'\n",
-      "✅ 184 resultados para 'ic'\n",
-      "🔍 Buscando: 'id'\n",
-      "✅ 202 resultados para 'id'\n",
-      "🔍 Buscando: 'ie'\n",
-      "✅ 184 resultados para 'ie'\n",
-      "🔍 Buscando: 'if'\n",
-      "✅ 200 resultados para 'if'\n",
-      "🔍 Buscando: 'ig'\n",
-      "✅ 190 resultados para 'ig'\n",
-      "🔍 Buscando: 'ih'\n",
-      "✅ 153 resultados para 'ih'\n",
       "🔍 Buscando: 'ii'\n",
       "⚠️ Sin resultados para 'ii'\n",
-      "📦 Guardados 17168 registros en '../data/data_raw/itunes_2025-04-21.csv'\n"
+      "🔍 Buscando: 'in'\n",
+      "⚠️ Sin resultados para 'in'\n",
+      "🔍 Buscando: 'la'\n",
+      "⚠️ Sin resultados para 'la'\n",
+      "🔍 Buscando: 'me'\n",
+      "⚠️ Sin resultados para 'me'\n",
+      "🔍 Buscando: 'no'\n",
+      "⚠️ Sin resultados para 'no'\n",
+      "🔍 Buscando: 'te'\n",
+      "⚠️ Sin resultados para 'te'\n",
+      "🔍 Buscando: 'to'\n",
+      "⚠️ Sin resultados para 'to'\n",
+      "🔍 Buscando: 'zk'\n",
+      "✅ 162 resultados para 'zk'\n",
+      "🔍 Buscando: 'zl'\n",
+      "✅ 123 resultados para 'zl'\n",
+      "🔍 Buscando: 'zm'\n",
+      "✅ 201 resultados para 'zm'\n",
+      "🔍 Buscando: 'zn'\n",
+      "✅ 142 resultados para 'zn'\n",
+      "🔍 Buscando: 'zo'\n",
+      "⚠️ Sin resultados para 'zo'\n",
+      "🔍 Buscando: 'zp'\n",
+      "✅ 180 resultados para 'zp'\n",
+      "🔍 Buscando: 'zq'\n",
+      "✅ 186 resultados para 'zq'\n",
+      "🔍 Buscando: 'zr'\n",
+      "✅ 192 resultados para 'zr'\n",
+      "🔍 Buscando: 'zs'\n",
+      "✅ 171 resultados para 'zs'\n",
+      "🔍 Buscando: 'zt'\n",
+      "✅ 192 resultados para 'zt'\n",
+      "🔍 Buscando: 'zu'\n",
+      "✅ 201 resultados para 'zu'\n",
+      "🔍 Buscando: 'zv'\n",
+      "✅ 134 resultados para 'zv'\n",
+      "🔍 Buscando: 'zw'\n",
+      "✅ 194 resultados para 'zw'\n",
+      "🔍 Buscando: 'zx'\n",
+      "✅ 170 resultados para 'zx'\n",
+      "🔍 Buscando: 'zy'\n",
+      "✅ 193 resultados para 'zy'\n",
+      "🔍 Buscando: 'zz'\n",
+      "✅ 79 resultados para 'zz'\n",
+      "📦 Guardados 2520 registros en '../data/data_raw/itunes_2025-04-27.csv'\n"
      ]
     }
    ],
